--- a/styles/main.css
+++ b/styles/main.css
@@ -61,6 +61,11 @@ body {
   background-size: 400% 400%;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
+
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -385,6 +390,9 @@ img {
 }
 
 @media (max-width: 768px) {
+
+
+
   .hero-content h1 {
     font-size: 2.5rem;
   }
@@ -609,10 +617,16 @@ img {
 
 /* Footer */
 .footer {
-  padding: 3rem 0;
+  padding: 25rem 0 1rem 0;
   background-color: transparent;
   border-top: 1px solid var(--border-color);
   /* border: 1px solid var(--secondary-color); */
+  display: flex;
+  align-items: end;
+}
+
+.footer .container {
+  height: 100%;
 }
 
 .footer-content {
@@ -670,6 +684,27 @@ img {
   .component-group {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
+
+  .mobile-menu {
+    color: var(--text-light);
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(10px);
+    line-height: 6rem;
+    font-size: 2.3rem;
+    text-align: center;
+    /* font-family: 'Courier New', Courier, monospace; */
+    position: absolute;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
 
 @media (max-width: 576px) {
@@ -836,4 +871,22 @@ img {
 
 .slider1 {
   width: 50vw;
+}
+
+
+.mobile-menu ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+.close {
+  position: absolute;
+  right: 20px;
+  font-family: cursive;
+  top: 0;
+  font-size: 30px;
 }
